# Hash_checksum

./: CMakeLists.txt  README.md
src/: hash.cpp  hash.h  main.cpp
tests/: hashlib_test.cpp
